Make the "Edit Unit" and "Edit Lesson" buttons into pencil icons to the right of the unit and lesson titles respectively. Fix bug in which the first "Edit Lesson" button was not showing for a unit which displayed all the lessons on one page. 	Change on 2015/07/24 by jorr <jorr@google.com> ------------- Created by MOE: http://code.google.com/p/moe-java MOE_MIGRATED_REVID=99072750

--- a/coursebuilder/assets/css/main.css
+++ b/coursebuilder/assets/css/main.css
@@ -374,6 +374,19 @@ a.gcb-button-action, button.gcb-button-action {
   margin-left: 8px;
 }
 
+.gcb-edit-resource-button.icon,
+.gcb-edit-resource-button.icon:visited {
+  color: #ccc;
+  font-size: 20px;
+  background: inherit;
+  border: none;
+  text-decoration: none;
+}
+
+.gcb-edit-resource-button.icon:hover {
+  color: #555;
+}
+
 .gcb-button-author {
   background-color: #40DA9D;
   background-image: -moz-linear-gradient(top,#40DA9D,#40DA9D);
